add api unit test
